Add Google Icons.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-    <title>covid-explained</title>
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <title>Covid Explained</title>
   </head>
   <body>
     <div id="app"></div>
