--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <!-- <script src="../node_modules/ckeditor4/ckeditor.js"></script>
+    <script src="../node_modules/ckeditor4-vue/dist/ckeditor.js"></script> -->
     <!--Import Google Icon Font-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
