--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <!-- Tailwind CDN -->
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Libre+Franklin&display=swap" rel="stylesheet">
     <title>Covid Explained</title>
   </head>
   <body>
