--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Tailwind CDN -->
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,700;1,800;1,900&&family=Libre+Franklin&display=swap" rel="stylesheet">
-    <title>Covid Explained</title>
+    <title>COVID Explained</title>
   </head>
   <body>
     <div id="app"></div>
