Adds OG tags and adds favicon to /static folder

--- a/index.html
+++ b/index.html
@@ -3,6 +3,30 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Covid Explained</title>
+    <!-- Search Engine -->
+    <meta name="description" content="COVID-19 is confusing. There's a lot of conflicting information out there— can you get the virus from food? Is there such a thing as immunity? What kind of tests are really out there? Who is most at risk? And all the conflicting information can make it hard to make decisions, from whether to go to the grocery store to when to send your kids back to day care.">
+    <meta name="image" content="/static/covid-og.png">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Covid Explained">
+    <meta itemprop="description" content="COVID-19 is confusing. There's a lot of conflicting information out there— can you get the virus from food? Is there such a thing as immunity? What kind of tests are really out there? Who is most at risk? And all the conflicting information can make it hard to make decisions, from whether to go to the grocery store to when to send your kids back to day care.">
+    <meta itemprop="image" content="/static/covid-og.png">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Covid Explained">
+    <meta name="og:description" content="COVID-19 is confusing. There's a lot of conflicting information out there— can you get the virus from food? Is there such a thing as immunity? What kind of tests are really out there? Who is most at risk? And all the conflicting information can make it hard to make decisions, from whether to go to the grocery store to when to send your kids back to day care.">
+    <meta name="og:image" content="/static/covid-og.png">
+    <meta name="og:site_name" content="Covid Explained">
+    <meta name="og:type" content="website">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+    <link rel="manifest" href="/static/site.webmanifest">
+    <link rel="shortcut icon" href="/static/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/static/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
     <script
       src="https://kit.fontawesome.com/8dc5f2b794.js"
       crossorigin="anonymous"
